--- a/01-Blog-Frontend/package.json
+++ b/01-Blog-Frontend/package.json
@@ -13,6 +13,7 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "firebase": "^12.0.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
