--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules/
 .env
+.env.development
+.env.production
 
 02-Blog-Backend/fullstack-blog-ef4f4-firebase-adminsdk-fbsvc-dc0c32657f.json
